--- a/zip.html
+++ b/zip.html
@@ -1,92 +1,56 @@
-<!DOCTYPE html>
-<html>
-<body onload='sample2_execDaumPostcode()'>
-<!-- iOS에서는 position:fixed 버그가 있음, 적용하는 사이트에 맞게 position:absolute 등을 이용하여 top,left값 조정 필요 -->
-<div id='layer' style='position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;'>
-</div>
+<input type="text" id="sample6_postcode" placeholder="우편번호">
+<input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
+<input type="text" id="sample6_address" placeholder="주소"><br>
+<input type="text" id="sample6_detailAddress" placeholder="상세주소">
+<input type="text" id="sample6_extraAddress" placeholder="참고항목">
 
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script>
-    // 우편번호 찾기 화면을 넣을 element
-    var element_layer = document.getElementById('layer');
-    //창열기
-    function sample2_execDaumPostcode() {
+    function sample6_execDaumPostcode() {
         new daum.Postcode({
-            onresize:function(size) {
-		//initLayerPosition(size.width,size.height);
-            },
             oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
 
-		WEB_Cshap_Script2( data.zonecode             ,data.address  	     ,data.addressEnglish         , data.addressType         ,data.userSelectedType
-				  ,data.noSelected           ,data.userLanguageType  ,data.roadAddress            , data.roadAddressEnglish  ,data.jibunAddress
-				  ,data.jibunAddressEnglish  ,data.autoRoadAddress   ,data.autoRoadAddressEnglish , data.autoJbunAddress     ,data.autoJibunAddressEnglish
-				  ,data.buildngCode          ,data.buildingName      ,data.apartment              , data.sido                ,data.sigungu
-				  ,data.sigunguCode          ,data.roadnameCode      ,data.bcode                  , data.roadname            ,data.bname
-				  ,data.bname1               ,data.bname2            ,data.hname                  , data.query               ,data.postcode
-				  ,data.postcode1            ,data.postcode2         ,data.postcodeSeq
-                                 );
-                // 우편번호와 주소 정보를 해당 필드에 넣는다. ****************************************************
+                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var addr = ''; // 주소 변수
+                var extraAddr = ''; // 참고항목 변수
 
-                // iframe을 넣은 element를 안보이게 한다.
-                // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
-                element_layer.style.display = 'none';
-            },
-            width : '100%',
-            height : '100%',
-            maxSuggestItems : 5
-        }).embed(element_layer);
+                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                    addr = data.roadAddress;
+                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                    addr = data.jibunAddress;
+                }
 
-        // iframe을 넣은 element를 보이게 한다.
-        element_layer.style.display = 'block';
+                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                if(data.userSelectedType === 'R'){
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if(extraAddr !== ''){
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+                    // 조합된 참고항목을 해당 필드에 넣는다.
+                    document.getElementById("sample6_extraAddress").value = extraAddr;
+                
+                } else {
+                    document.getElementById("sample6_extraAddress").value = '';
+                }
 
-        // iframe을 넣은 element의 위치를 화면의 가운데로 이동시킨다.
-        initLayerPosition(600,400);
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('sample6_postcode').value = data.zonecode;
+                document.getElementById("sample6_address").value = addr;
+                // 커서를 상세주소 필드로 이동한다.
+                document.getElementById("sample6_detailAddress").focus();
+            }
+        }).open();
     }
-
-
-
-    // 브라우저의 크기 변경에 따라 레이어를 가운데로 이동시키고자 하실때에는
-    // resize이벤트나, orientationchange이벤트를 이용하여 값이 변경될때마다 아래 함수를 실행 시켜 주시거나,
-    // 직접 element_layer의 top,left값을 수정해 주시면 됩니다.
-    function initLayerPosition(w,h){
-        var width = w; //우편번호서비스가 들어갈 element의 width
-        var height = h; //우편번호서비스가 들어갈 element의 height
-        var borderWidth = 1; //샘플에서 사용하는 border의 두께
-
-        // 위에서 선언한 값들을 실제 element에 넣는다.
-        element_layer.style.width = width + 'px';
-        element_layer.style.height = height + 'px';
-        element_layer.style.border = borderWidth + 'px solid';
-        // 실행되는 순간의 화면 너비와 높이 값을 가져와서 중앙에 뜰 수 있도록 위치를 계산한다.
-        element_layer.style.left = (((window.innerWidth || document.documentElement.clientWidth) - width)/2 - borderWidth) + 'px';
-        element_layer.style.top = (((window.innerHeight || document.documentElement.clientHeight) - height)/2 - borderWidth) + 'px';
-    }
-
-
-    // ************************************************************************
-    //	추가한 스크립트
-    // ************************************************************************
-
-    //C# -> WEB 전달
-    function Cshap_WEB_Script2(val1,val2) {
-	alert(val1 + ' ' + val2);
-    }
-
-
-    // WEB -> C# 전달
-    function WEB_Cshap_Script2(val1,val2,val3,val4,val5,val6,val7,val8,val9,val10 , val11,val12,val13,val14,val15,val16,val17,val18,val19,val20 ,val21,val22,val23,val24,val25,val26,val27,val28,val29,val30  ,val31,val32,val33) 
-    {
-	if (window.external)
-	{
-		window.external.lfn_WEB_Cshap_Script2(val1,val2,val3,val4,val5,val6,val7,val8,val9,val10
-						      ,val11,val12,val13,val14,val15,val16,val17,val18,val19,val20
-						      ,val21,val22,val23,val24,val25,val26,val27,val28,val29,val30
-						      ,val31,val32,val33
-						     );
-	}
-    }
-
-    // ************************************************************************
 </script>
-</body>
-</html>
