--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <input type="text" id="sample3_detailAddress" placeholder="상세주소">
 <input type="text" id="sample3_extraAddress" placeholder="참고항목">
 
+<!DOCTYPE html>
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script>
     // 우편번호 찾기 찾기 화면을 넣을 element
