--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <input type="text" id="sample3_extraAddress" placeholder="참고항목">
 
 <!DOCTYPE html>
-<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script>
     // 우편번호 찾기 찾기 화면을 넣을 element
     var element_wrap = document.getElementById('wrap');
