--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div id='layer' style='position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;'>
 </div>
 
-<script src='http://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js'></script>
+<script src='//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js'></script>
 <script>
     // 우편번호 찾기 화면을 넣을 element
     var element_layer = document.getElementById('layer');
